kubernetes/eks/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: acmecloud
  labels:
    app.kubernetes.io/part-of: acmecloud-enterprise-platform
